[package]
name = "mypeople"
version = "0.1.0"
authors = ["Alejandro Virelles <thesnakewitcher@gmail.com>"]
edition = "2021"
description = "A simple and modern contactbook/addressbook"
readme = "./README.md"
repository = "https://github.com/TheSnakeWitcher/mypeople"
license = "MIT"
keywords = ["addressbook", "contacts"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.0.29"
config = "0.13.3"
console = "0.15.5"
dirs = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "json", "time", "uuid", "all", "runtime-tokio-rustls", "runtime-actix-rustls", "macros"] }
tokio = { version = "1.23.0", features = ["tracing", "full"] }

[dev-dependencies]
assert_cmd = "2.0.11"
insta = "1.29.0"
trycmd = "0.14.16"

[profile.dev]
opt-level = 0 
debug = true
strip = "none"
split-debuginfo = '...'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.test]
inherits = "dev"

[profile.release]
debug-assertions = false
overflow-checks = false
incremental = false
strip = true        # strip symbols from binary
lto = true          # enable link-time optimization,options: "fat","thin"
opt-level = 's'     # optimize for size without removing vectorization
panic = "abort"     # abort on panic(not need to catch or unwind panics)
codegen-units = 1   # reduce number of codegen units to increase optimizations
